# ESP32-

./: README.md
ESP32_chfy/: CMakeLists.txt  Makefile  README.md
ESP32_chfy/main/: CMakeLists.txt  basic_imformation.c  connect.c  dht11.c  ethernet.c  main.c  mesh_light.c  mqtt_tcp.c  my_sntp.c  tcp_client.c  tcp_server.c  uart_stephan.c  wifi_mesh.c  workspace.code-workspace
ESP32_chfy/main/include/: basic_imformation.h  ethernet.h  main.h  mesh_light.h  mqtt_tcp.h  tcp_client.h  tcp_server.h  uart_stephan.h  wifi_mesh.h
esp_wl_second/child_node/: sdkconfig
esp_wl_second/child_node/main/: CMakeLists.txt  mesh_main.c  uart_rxtask.c  uart_rxtask.h
esp_wl_second/child_node/main/include/: mesh_light.h
esp_wl_second/root_node/main/: CMakeLists.txt  mesh_main.c  mqtt_tcp.c  mqtt_tcp.h  my_sntp.c  my_sntp.h
esp_wl_second/root_node/main/include/: mesh_light.h
esp_wl_second/uart_txtask/main/: uart_async_rxtxtasks_main.c
station/main/: CMakeLists.txt  main.c  mesh_light.c  mqtt_tcp.c  my_sntp.c  uart_rxtask.c  wifi_mesh.c  workspace.code-workspace
station/main/include/: dht11.h  main.h  mesh_light.h  mqtt_tcp.h  my_sntp.h  uart_rxtask.h  wifi_mesh.h
