idf_component_register(SRCS 
                            "uart_stephan.c"
                            "tcp_server.c" 
                            "tcp_client.c"
                            "ethernet.c" 
                            "main.c" 
                            "connect.c"
                            "my_sntp.c"
                            "mqtt_tcp.c"
                            "mesh_light.c"
                            "dht11.c"
                            "wifi_mesh.c"
                            "basic_imformation.c"
                           
INCLUDE_DIRS "." "include")
