idf_component_register(SRCS "main.c" "connect.c"
                            "my_sntp.c"
                            "mqtt_tcp.c"
                            "uart_rxtask.c"
                            "mesh_light.c"
                            "dht11.c"
                            "wifi_mesh.c"

INCLUDE_DIRS "." "include")
